# lambda-handler-rs

./: .gitignore  Cargo.toml  README.md
lambda_handler/: Cargo.toml  README.md
lambda_handler/examples/: lambda_handler_example.rs  lambda_router_example.rs
lambda_handler/src/: events.rs  handler.rs  lib.rs
lambda_handler_example/: Cargo.toml
lambda_handler_example/src/: main.rs
lambda_router/: Cargo.toml
lambda_router/examples/: lambda_router_example.rs
lambda_router/src/: lib.rs  router.rs
lambda_router_example/: Cargo.toml
lambda_router_example/src/: main.rs
