[package]
name = "lambda_handler"
description = "A library for handling AWS Lambda requests"
version = "0.1.3"
authors = ["Matthew Badger <matt@branchenergy.com>"]
license = "Apache-2.0"
repository = "https://github.com/branchenergy/lambda-handler-rs"
documentation = "https://docs.rs/lambda_handler"
edition = "2021"

[dependencies]
aws_lambda_events = "0.11"
lambda_runtime = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
