[package]
name = "lambda_handler_example"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
lambda_handler = { path = "../lambda_handler" }
